# narrator

./: .dockerignore  .gitignore  DEPLOY.md  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml
app/: alias_generated.py  asr.py  chart.py  correct.py  db.py  dose_correct.py  drugs.py  extract.py  grammar.py  main.py  models.py  numbers.py  parse.py  resolve.py  state.py  validate.py
app/templates/: base.html  case.html  index.html  report.html
app/templates/partials/: _event_desc.html  _event_row.html  _event_row_edit.html  _icons.html  board.html  edit_form.html
deploy/: .env.example  docker-compose.yml  narrator.caddy
scripts/: asr_bench.py  eval_speech.py  gen_aliases.py  gen_dose_aliases.py  ui_capture_test.py  ui_check.py  ui_flow_shots.py  vad_probe.py
static/: app.css  asr-local.js  audio.js
tests/: test_capture.py  test_conventions.py  test_correct.py  test_dose_correct.py  test_extract.py  test_multidrug.py  test_numbers.py  test_resolve.py  test_state.py  test_units.py  test_validate.py
