[project]
name = "narrator"
version = "0.1.0"
description = "Voice-driven anaesthetic drug-logging webapp (prototype)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "jinja2>=3.1",
    "sqlmodel>=0.0.16",
    "python-multipart>=0.0.9",
    "anthropic>=0.109.1",
    "faster-whisper>=1.2.1",
    "jellyfish>=1.2.1",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
    "playwright>=1.60.0",
]

[tool.uv]
# This is an application, not a library — don't try to build/install `app` as a
# package. uvicorn/pytest import it from the repo root instead.
package = false

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
